# AAOS

./: .gitignore  METADoctrine.md  METADoctrine_BLUEPRINT.md  README.md
00_METADoctrine/: DNA.md  README.md
00_METADoctrine/_archive/: AAOS-AIVarium.Ontology.md  METADoctrine-BLUEPRINT.md
00_Planning/: AAOS-AIVarium.Nucleus.md  AAOS-AIVarium.md  AAOS.Nucleus.md  AAOS.Swarm.COF(Context Orchestrated Filesystem).md  AAOS_DOCS_INDEX.md  METADoctrine-BLUEPRINT.md  README.md
00_Planning/change_packets/: README.md
01_AAOS-Record_Archive/: DNA_BLUEPRINT.md  README.md
01_Nucleus/: README.md
02_AAOS-Immune_system/: AAOS_DNA_DOCTRINE_RULE.md  AAOS_IDENTITY_DNA_BLUEPRINT.md  AUDIT_LOG.md  DNA.md  META_AUDIT_LOG.md  README.md
02_Swarm/: DNA.md  DNA_BLUEPRINT.md  README.md
03_AAOS-Deliberation_Chamber/: DNA_BLUEPRINT.md  README.md
03_Manifestation/: DNA.md  DNA_BLUEPRINT.md  README.md
03_Manifestation/Summon-Agents/mcp/sa-call-cli-agents-mcp/: .dockerignore  Dockerfile  MANIFEST.md  README.md  docker-compose.yml  pyproject.toml
03_Manifestation/Summon-Agents/mcp/sa-call-cli-agents-mcp/src/aaos_mcp/: __init__.py  job_runner.py  jobs.py  server.py
03_Manifestation/Summon-Agents/mcp/sa-call-cli-agents-mcp/src/aaos_mcp/tools/: __init__.py  glob_indexing.py  task_manager.py  task_solver.py
03_Manifestation/Summon-Agents/mcp/sa-call-cli-agents-mcp/src/aaos_mcp/utils/: __init__.py  frontmatter.py  paths.py
03_Manifestation/Summon-Agents/mcp/sa-call-cli-agents-mcp/tests/: __init__.py  test_job_runner.py  test_utils.py
04_AAOS-Swarm/: DNA_BLUEPRINT.md  README.md
(+735 files in other folders)
